--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -389,7 +389,8 @@
       \begin{gather*}
         \sum\limits_{t=0}^{\infty}c_t^i = \sum\limits_{t=0}^{\infty}e_t^i \ \forall t\\
         c_t^i \geq 0 \ \forall t \ \text{and} \ i = 1,2 \\
-      \end{gather}
+      \end{gather*}
+      Lagrangian and FOC's:
 
 \section*{Question 5 (Bonus)}
   \subsection*{Problem}
