--- a/Stat/HW4/HW4.tex
+++ b/Stat/HW4/HW4.tex
@@ -133,6 +133,8 @@
     \text{Avar}\sqrt{N}(\hat{\boldsymbol{\beta}} - \boldsymbol{\beta}) = \left[\mathbb{E}[\boldsymbol{x}'\boldsymbol{x}]\right]^{-1} \mathbb{E}[h(\boldsymbol{x})\boldsymbol{x}'\boldsymbol{x}]\left[\mathbb{E}[\boldsymbol{x}'\boldsymbol{x}]\right]^{-1}
     \end{align}
     This expression is useful when $\mathbb{E}[\boldsymbol{u} | \boldsymbol{x}] = \boldsymbol{0}$ for comparing the asymptotic variances of OLS and weighted least squares estimators; see, for example, Wooldridge (1994b).
+  \subsection*{Solution}
+    
 \section*{Question 5.1}
   \subsection*{Problem}
     In this problem you are to establish the algebraic equivalence between 2SLS and OLS estimation of an equation containing an additional regressor. Although the result is completely general, for simplicity consider a model with a single (suspected) endogenous variable:
